# FeatureCreation

./: .isort.cfg  README.md  pyproject.toml
examples/: lgbm_breast_cancer.py  titanic.py
examples/shared/: __init__.py  plot_feature_importance.py
feature_creation/: __init__.py  feature_creation.py
feature_creation/transformers/: __init__.py  bins_features.py  cyclical_features.py  math_features.py
feature_creation/transformers/shared/: __init__.py  select_best_features.py
