[tool.poetry]
name = "feature_creation"
version = "0.1.0"
description = "Automatic features creation"
authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_creation"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.2"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
lightgbm = "^3.3.3"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
